[package]
name = "oniongen"
version = "0.1.0"
edition = "2021"

[dependencies]
base32 = "^0.4"
clap = { version = "4.5", features = ["derive"] }
crossbeam = "0.8"
crossbeam-channel = "0.5"
ed25519-dalek = "^2.1"
num_cpus = "1.13"
rand = { version = "0.8", features = ["small_rng"] }
rand_core = "0.6"
rayon = "1.5"
regex = "1.5"
sha2 = "0.10"
sha3 = "0.10"